feat: add controller implementation
