# src/api.yaml
@@ -56,20 +56,6 @@ paths:
       responses:
         '201':
           description: Success
-    delete:
-      description: Deletes the forecast record
-      tags:
-        - WeatherForecast
-      operationId: DeleteWeatherForecast
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: string
-              format: date
-      responses:
-        '200':
-          description: Success
     put:
       description: Replaces the whole forecast message
       tags:
